--- a/comments/index.html
+++ b/comments/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="commentsCont">
-        <input type="text" id="comment">
-        <button id="send">Comment</button>
+    <div class="content">
+        <div class="commentsCont">
+            <input type="text" id="comment" placeholder="Escribir comentario...">
+            <button id="send">Comentar</button>
+       </div>
+       <div id="contentComments"></div>
     </div>
     <script src="index.js"></script>
 </body>
